<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.profile.EditActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_dp"
        android:padding="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_full_name"
                android:theme="@style/NormalEditTextStyle"
                app:layout_constraintBottom_toTopOf="@id/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:drawableStart="@mipmap/round_person_black_24"
                    android:drawablePadding="@dimen/dimen_16_dp"
                    android:lines="1"
                    android:padding="@dimen/dimen_16_dp"
                    android:text="@string/sample_username"
                    android:textColor="@color/textColor"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_about"
                android:theme="@style/NormalEditTextStyle"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fname">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/baseline_info_black_24"
                    android:drawablePadding="@dimen/dimen_16_dp"
                    android:gravity="top|start"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLength="160"
                    android:minHeight="@dimen/dimen_110_dp"
                    android:padding="@dimen/dimen_16_dp"
                    android:text="@string/lorem_ipsum_short"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_email"
                android:theme="@style/NormalEditTextStyle"
                app:layout_constraintBottom_toTopOf="@+id/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/ic_email_black_24"
                    android:drawablePadding="@dimen/dimen_16_dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:padding="@dimen/dimen_16_dp"
                    android:text="@string/sample_email"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_whatsapp"
                android:theme="@style/NormalEditTextStyle"
                app:layout_constraintBottom_toTopOf="@+id/btnAddCourse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/baseline_call_black_24"
                    android:drawablePadding="@dimen/dimen_16_dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="@dimen/dimen_16_dp"
                    android:text="@string/sample_phone"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddCourse"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_course"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/material_blue_400"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/listCourses"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone"
                app:rippleColor="@color/material_grey_400" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listCourses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="true"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/dimen_144_dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAddCourse"
                tools:itemCount="7"
                tools:listitem="@layout/item_course" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/dimen_4_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="@dimen/dimen_54_dp"
                android:layout_height="@dimen/dimen_54_dp"
                android:layout_marginEnd="@dimen/dimen_10_dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:src="@mipmap/round_arrow_back_black_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editTitle"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/title_edit_profile"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/rich_black"
                app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="@dimen/dimen_128_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_4_dp"
        android:focusable="true"
        android:padding="@dimen/dimen_14_dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/textColor"
        app:cornerRadius="@dimen/dimen_32_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>