<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/dimen_16_dp"
    android:paddingStart="@dimen/dimen_16_dp"
    android:background="@color/white"
    tools:context=".view.auth.SignUp">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8_dp"
        android:layout_marginTop="@dimen/dimen_6_dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fname"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_fname"
        android:theme="@style/NormalEditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:lines="1"
            android:padding="@dimen/dimen_16_dp"
            android:textColor="@color/textColor"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lname"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_lname"
        android:theme="@style/NormalEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:lines="1"
            android:padding="@dimen/dimen_16_dp"
            android:textColor="@color/textColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_email"
        android:theme="@style/NormalEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/dimen_16_dp"
            android:drawableStart="@mipmap/ic_email_black_24"
            android:lines="1"
            android:padding="@dimen/dimen_16_dp"
            android:textColor="@color/textColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_whatsapp"
        android:theme="@style/NormalEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:drawableStart="@mipmap/baseline_call_black_24"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:lines="1"
            android:drawablePadding="@dimen/dimen_16_dp"
            android:padding="@dimen/dimen_16_dp"
            android:textColor="@color/textColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="@dimen/dimen_128_dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16_dp"
        android:clickable="true"
        android:elevation="@dimen/dimen_4_dp"
        android:focusable="true"
        android:padding="@dimen/dimen_14_dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:text="@string/next"
        android:textAlignment="center"
        app:rippleColor="@color/white"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/textColor"
        app:cornerRadius="@dimen/dimen_32_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>