<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8_dp"
    android:background="@drawable/border_normal"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16_dp">

    <TextView
        android:id="@+id/file_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/file_type_pdf"
        android:text="@string/file_type_pdf"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8_dp"
        android:layout_marginEnd="8dp"
        android:text="@string/file_name_sample"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintEnd_toStartOf="@id/getFileBtn"
        app:layout_constraintStart_toEndOf="@id/file_type"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/getFileBtn"
        android:layout_width="@dimen/dimen_54_dp"
        android:layout_height="@dimen/dimen_54_dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@null"
        android:src="@mipmap/baseline_get_app_black_24"
        app:layout_constraintBottom_toTopOf="@id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ic_desc"
        android:layout_width="@dimen/dimen_24_dp"
        android:layout_height="@dimen/dimen_24_dp"
        android:contentDescription="@null"
        android:src="@mipmap/baseline_info_black_24"
        android:tint="@color/material_grey_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/desc" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem_ipsum_short"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/material_grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_desc"
        app:layout_constraintTop_toBottomOf="@id/file_type" />

</androidx.constraintlayout.widget.ConstraintLayout>